--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-atol-wrapper",
   "description": "Node ATOL DTO 10 wrapper",
-  "version": "0.0.28",
+  "version": "0.0.31",
   "main": "bindings.js",
   "types": "bindings.d.ts",
   "scripts": {
@@ -22,7 +22,7 @@
   "engines": {
     "node": ">= 16.0.0"
   },
-  "homepage": "https://github.com/farafonov-alexey/node-atol-wrapper",
+  "homepage": "https://github.com/testorio69/node-atol-wrapper",
   "keywords": [
     "Node.js",
     "wrapper",
@@ -31,15 +31,15 @@
   ],
   "author": {
     "name": "farafonov.alexey",
-    "url": "https://github.com/farafonov-alexey",
-    "email": "farafonov.alexey@gmail.com"
+    "url": "https://github.com/testorio69",
+    "email": "testorio69@gmail.com"
   },
   "contributors": [
     "maxvgi https://github.com/maxvgi"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/farafonov-alexey/node-atol-wrapper.git"
+    "url": "git://github.com/testorio69/node-atol-wrapper.git"
   },
   "license": "MIT"
 }
